
=== New features

- https://github.com/eclipse-syson/syson/issues/977[#977] [validation] SysON now implements the constraints (a.k.a. validation rules) from the SysMLv2 specification.
The _Validation_ view show the results of the execution of the constraints on your models.
- https://github.com/eclipse-syson/syson/issues/987[#987] Implementation of drag and drop in Explorer view.


== v2025.1.0

=== Shapes

- Improve support for libraries in the explorer

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/796[#796] [import] Improve the code in the import module to make it more generic:
* Delete the `AstConstants` class: Constants have been split across several classes.
* Delete the `LogBook` class (no longer used).
* Replace `AstContainmentReferencePart` with `ContainmentReferenceHandler`.
* Replace `AstObjectParser` with `EAttributeHandler`.
* Replace `AstWeakReferenceParser` with `NonContainmentReferenceHandler`.
* Delete `ReferenceHelper` (no longer used).
* Delete `SysMLUploadDocumentReportProvider` as it is not functional.
* Most components used in the transformation now require a `MessageReporter` instance to collect transformation messages.
- https://github.com/eclipse-syson/syson/issues/887[#887] [explorer] Rework the structure of standard and user libraries in the explorer:
* Rename `StandardLibraryDirectory` to `LibrariesDirectory`.
* Rename `ReferencedLibraryDirectory` to `UserLibrariesDirectory`.
- https://github.com/eclipse-syson/syson/issues/906[#906] [explorer] Ensure that a non-library imported model is not moved into the _User libraries_ directory when a _LibraryPackage_ is created in it.
`ElementUtil#setIsImported(Resource)` has been updated to `ElementUtil#setIsImported(Resource, boolean)` to reflect this change.

=== Dependency update

- [releng] Switch to Sirius Web 2025.1.0
- [releng] Upgrade `turbo` to version 2.3.3 (from 1.13.3 before)